# PKPD-Agent

./: README.md  pyproject.toml
data/: acocella_1984_metadata.json  pkpd_acocella_1984_data.csv
poc/: __init__.py  agent_poc.py  agents.py  io_utils.py  llm_utils.py  model.py  steps.md  validate.py
tests/: test_smoke.py
